@@ -1,7 +1,7 @@
 Event Sourcing CQRS Microservices application with SSE Web Push Notifications on top of Kubernetes with Kafka and Cassandra
 
 # Prerequisites
-- Java8
+- JDK 11
 - Kubernetes (https://kubernetes.io/)
 - Minikube (with dns and ingress enabled)
 - Docker (https://www.docker.com/ - no need for demon, just client to connect to server in minikube)
@@ -16,8 +16,19 @@ Event Sourcing CQRS Microservices application with SSE Web Push Notifications on
 - https://github.com/infrabricks/kubernetes-standalone
 - https://dzone.com/articles/getting-started-with-spring-data-cassandra
 
+# Build Cassandra with JDK11 support
 
-# Manual e2e test (TODO: automate)
+  Step to be removed once official release supporting JDK 11 is available.
+
+  Have maven and ant installed. Then clone, build and install `cassandra-all` in local maven repo:
+  
+  `$ git clone https://github.com/jojczykp/cassandra.git --single-branch --branch missing-hppc-transitive-dependency-in-produced-pom`
+  
+  `$ cd cassandra`
+  
+  `$ ant mvn-install`
+
+# Build, Run and Manual e2e test (TODO: automate)
 
 - Make sure minikube VM has enough resources (I used 3CPU cores, 12GB RAM)
 
@@ -33,13 +44,15 @@ Event Sourcing CQRS Microservices application with SSE Web Push Notifications on
 
   This needs to be executed as workaround (minikube console):
 
+  `minikube ssh`
+  
   `sudo ip link set docker0 promisc on`
 
 - Continue with env configuration
 
   `$ minikube addons enable ingress`
 
-  `$ sudo echo "$(minikube ip) minikube.local" >> /etc/hosts`
+  `$ sudo echo "$(minikube ip) minikube.local" >> /etc/hosts` (if not present yet)
 
   `$ eval $(minikube docker-env)`
 
@@ -86,16 +99,27 @@ Event Sourcing CQRS Microservices application with SSE Web Push Notifications on
 
 `$ curl http://minikube.local/debugger`
 
-`$ docker exec -it $(docker ps | grep kafka-cqrs-debugger-service | head -n 1 | cut -f1 -d' ') sh`
+`$ kubectl exec -it $(kubectl get pods -o name -l service=debugger-service | cut -d'/' -f2) sh`
 
-`$ docker exec -it $(docker ps | grep kafka-cqrs-kafka-service | head -n 1 | cut -f1 -d' ') bash`
+`$ kubectl exec -it $(kubectl get pods -o name -l service=kafka-service | cut -d'/' -f2) bash`
 
-`$ docker logs -f $(docker ps | grep kafka-cqrs-kafka-service | head -n 1 | cut -f1 -d' ')`
+`# kafka-console-producer.sh --broker-list kafka-service:9092 --topic documents.t`
 
-`$ docker exec -it $(docker ps | grep kafka-cqrs-zookeeper-service | head -n 1 | cut -f1 -d' ') zkCli.sh`
+`# kafka-console-consumer.sh --bootstrap-server kafka-service:9092 --topic documents.t`
+
+`$ kubectl logs -f $(kubectl get pods -o name -l service=kafka-service | cut -d'/' -f2)`
+
+`$ kubectl -n kube-system logs -f $(kubectl -n kube-system get pods -o name -l app=nginx-ingress-controller | cut -d'/' -f2)`
+
+`$ kubectl exec -it $(kubectl get pods -o name | grep kafka-cqrs-zookeeper-service | cut -d'/' -f2) zkCli.sh`
+
+`$ kubectl exec -it $(kubectl get pods -o name | grep kafka-cqrs-cassandra-service | cut -d'/' -f2) cqlsh`
 
 `> select * from documents.documents;`
 
-`$ kafka-console-producer.sh --broker-list kafka-service:9092 --topic documents.t`
-
-`$ kafka-console-consumer.sh --bootstrap-server kafka-service:9092 --topic documents.t`
+```
+test {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED'
+    logging.captureStandardOutput LogLevel.DEBUG
+}
+```
